Se repara el id del input del cuadrado

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <script>
         function fnCuadrado() {
-            var area = document.getElementById("base").value;
+            var area = document.getElementById("basecuadrado").value;
             console.log("area", area * area)
             document.getElementById("areacuadrado").innerHTML = area * area;
         }
